--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body {
     font-family: "Roboto", sans-serif;
     background-color: #fff;
-   color: #2e2f42;
+    color: #434455;
 }
 button {
     cursor: pointer;
@@ -18,21 +18,21 @@ a {
     font-weight: 700;
     font-size: 18px;
 
-    line-height: 1.16;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: inherit;
-}
-.navigation-logo-web {
     color: #4d5ae5;
-    }   
+}
+.navigation-logo-header{
+    color: #2e2f42;
+}  
 .header-nav-btn {
     font-weight: 500;
     font-size: 16px;
 
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: inherit;
+    color: #2e2f42;
 }
 .header-nav-btn:hover,
 .header-nav-btn:focus,
@@ -40,14 +40,19 @@ a {
  {
 color: #404BBF;
 }
+.address{
+   font-style: normal;
+}
 .address-nav {
     font-weight: 400;
     font-size: 16px;
 
     line-height: 1.5;
-    color: #434455;
+    letter-spacing: 0.02em;
+    color: inherit;
 }
-.address-nav:hover {
+.address-nav:hover,
+.address-nav:focus {
     color:#404BBF;
 }
 /* Main */
@@ -62,10 +67,13 @@ color: #404BBF;
     font-size: 56px;
 
     line-height: 1.07;
+    letter-spacing: 0.02em;
     text-align: center;
     color: #fff;
 }
 .hero-button {
+    font-family:"Roboto",
+        sans-serif;
     font-weight: 500;
     font-size: 16px;
 
@@ -78,7 +86,8 @@ color: #404BBF;
     color: #fff;
     background-color: #4D5AE5;
 }
-.hero-button:hover {
+.hero-button:hover,
+.hero-button:focus {
  background-color: #404BBF;
 }
 
@@ -92,7 +101,7 @@ color: #404BBF;
 
     line-height: 1.2;
     letter-spacing: 0.02em;
-    color: inherit;
+    color: #2e2f42;
 }
 .feature-text {
     font-weight: 400;
@@ -100,7 +109,7 @@ color: #404BBF;
 
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #434455;
+    color: inherit;
 }
 /* section team */
 .section-team {
@@ -113,7 +122,11 @@ color: #404BBF;
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-align: center;
-    color: inherit;
+    color: #2e2f42;
+    text-transform: capitalize;
+}
+.team-list{
+    background-color: #ffffff;
 }
 .team-members-names {
     font-weight: 500;
@@ -121,7 +134,7 @@ color: #404BBF;
 
     line-height: 1.2;
     letter-spacing: 0.02em;
-    color: inherit;
+    color: #2e2f42;
 }
 .team-members-positions {
     font-weight: 400;
@@ -129,7 +142,10 @@ color: #404BBF;
 
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #434455;
+    color: inherit;
+}
+.team-img{
+    width: 264px;
 }
 /* Section Our Portfolio */
 .portfolio-title {
@@ -137,9 +153,10 @@ color: #404BBF;
     font-size: 36px;
 
     line-height: 1.11;
+    text-transform: capitalize;
     text-align: center;
     letter-spacing: 0.02em;
-    color: inherit;
+    color: #2e2f42;
 }
 .portfolio-list-title {
     font-weight: 500;
@@ -147,7 +164,7 @@ color: #404BBF;
 
     line-height: 1.2;
     letter-spacing: 0.02em;
-    color: inherit;
+    color: #2e2f42;
 }
 .portfolio-about-app {
     font-weight: 400;
@@ -155,13 +172,13 @@ color: #404BBF;
 
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #434455;
+    color: inherit;
 }
 /* footer */
 .footer {
     background: #2e2f42 ;
 }
-.navigation-logo-studio{
+.navigation-logo-footer{
    color: #f4f4fd;
 }
 .footer-description{
